--- a/app/Resources/css/1024.less
+++ b/app/Resources/css/1024.less
@@ -6,6 +6,11 @@
     overflow-x: hidden !important;
   }
 
+  .wrapper-content-course{
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+
   .wrapper-content-slide{
     max-width: 100% !important;
     overflow-x: hidden !important;
