--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -72,6 +72,26 @@
     display: none;
   }
 
+  .content-courses {
+    .content-form {
+      .form {
+        .wrapper-form {
+          width: 100%;
+          max-width: 380px;
+          .form-fields {
+            .field {
+              width: 100%;
+            }
+            .label {
+              width: 100%;
+            }
+          }
+
+        }
+      }
+    }
+  }
+
   .content {
     .content-form {
       .form {
