--- a/app/Resources/css/800.less
+++ b/app/Resources/css/800.less
@@ -1,5 +1,33 @@
 @media only screen and (max-width: 800px) {
-  .content {
+
+  .content-courses {
+    .slide_show {
+      .wrapper_content_slide_course {
+        width: 100%;
+        display: block;
+      }
+    }
+
+    .header_content_courser {
+      .first_column {
+        width: 100%;
+        display: block;
+      }
+      .second_column {
+        width: 100%;
+        display: block;
+
+      }
+    }
+    .body_content_courser {
+      width: 100%;
+
+    }
+
+    .footer_content_courser {
+      width: 100%;
+    }
+
     .content-form {
       .form {
         .header-form {
@@ -32,4 +60,39 @@
       }
     }
   }
+
+  .content{
+    .content-form {
+      .form {
+        .header-form {
+          .wrapper-header-form {
+            width: 100%;
+            max-width: 400px;
+            .element-first {
+              display: block;
+              width: 100%;
+              padding-bottom: 10px;
+              .icon{
+                width: 9%;
+              }
+              .text{
+                width: 89%;
+              }
+            }
+            .element-second {
+              display: block;
+              width: 100%;
+              .icon{
+                width: 9%;
+              }
+              .text{
+                width: 89%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
 }
