--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -15,6 +15,11 @@ body{
   margin: 0 auto;
 }
 
+.wrapper-content-course{
+  width: 800px;
+  margin: 0 auto;
+}
+
 .wrapper-content-slide{
   width: 740px;
   margin: 0 auto;
@@ -202,7 +207,7 @@ body{
   color: #000000;
 
   .slide_show{
-     max-width: 80%;
+     max-width: 100%;
      margin: 0 auto;
      padding-top: 30px;
      padding-bottom: 30px;
@@ -214,10 +219,96 @@ body{
         list-style: none;
       }
     }
+  }
 
 
+  .header_content_courser{
+    background: #F2F2F2;
+    padding-top: 10px;
+    padding-bottom: 56px;
+    .small{
+      font-family: "Bebas Neue",arial,sans-serif;
+      font-size: 25px;
+      font-weight: 700;
+      color: #000;
+    }
+    .first_column{
+      width: 50%;
+      display: inline-block;
+      vertical-align: top;
+      text-transform: uppercase;
+      font-family: "Bebas Neue",arial,sans-serif;
+      color: #000;
+      font-size: 50px;
+      font-weight: 700;
+      line-height: 46px;
+      letter-spacing: 1px;
 
-   }
+
+      .green{
+        color: #80cc28;
+      }
+    }
+    .second_column{
+      width: 49%;
+      display: inline-block;
+      color: #000000;
+      .title{
+        font-family: "Bebas Neue",arial,sans-serif;
+        font-size: 20px;
+        font-weight: 700;
+      }
+      .green{
+        font-family: "helvetica-neue-bold",arial,sans-serif;
+        color: #80cc28;
+        font-size: 13px;
+        span{
+          font-family: "HelveticaNeueLTStd Lt",arial,sans-serif;
+          color: #000000;
+        }
+      }
+    }
+  }
+
+  .body_content_courser{
+    background: #E5E5E5;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    font-family: "HelveticaNeueLTStd Lt",arial,sans-serif;
+    color: #000000;
+    .title{
+      font-family: "Bebas Neue",arial,sans-serif;
+      font-size: 25px;
+      font-weight: 700;
+    }
+    .text{
+      height: 300px;
+    }
+    img{
+      max-width: 20%;
+    }
+
+  }
+
+  .footer_content_courser{
+    background: #D8D8D8;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    font-family: "HelveticaNeueLTStd Lt",arial,sans-serif;
+    color: #000000;
+    .title{
+      font-family: "Bebas Neue",arial,sans-serif;
+      font-size: 25px;
+      font-weight: 700;
+      padding-bottom: 20px;
+    }
+    .text{
+      strong{
+        font-family: "helvetica-neue-bold",arial,sans-serif;
+        color: #000000;
+      }
+    }
+  }
 
   .text-contact-now{
     text-align: center;
@@ -260,7 +351,9 @@ body{
     }
   }
   .content-form{
-    margin-top: 34px;
+    background: #aa198d;
+    padding-top: 20px;
+    color: #ffffff;
     .form{
       .header-form{
         margin-top: 24px;
