--- a/app/Resources/views/desktop/courses/course_motion_graphics.html.twig
+++ b/app/Resources/views/desktop/courses/course_motion_graphics.html.twig
@@ -6,14 +6,14 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img4.png') }}" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/course-motion-graphic/img3.png') }}" /></li>
                     </ul>
                 </div>
             </div>
@@ -25,10 +25,10 @@
                 </p>
                 <div class="first_column">
                     <p>
-                        curso superior de
+                        CURSO DE
                     </p>
                     <p class="green">
-                        ilustraci&oacute;n tradicional y<br>digital
+                        MOTION GRAPHICS
                     </p>
                 </div>
                 <div class="second_column">
@@ -36,10 +36,10 @@
                         doble titulaci&oacute;n
                     </p>
                     <p class="green">
-                        ILUSTRACI&Oacute;N EDITORIAL Y DIGITAL<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
+                        MOTION GRAPHICS<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
                     </p>
                     <p class="green">
-                        ILUSTRACI&Oacute;N<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
+                        DESARROLLO DE PRODUCTOS AUDIOVISUALES MULTIMEDIA INTERACTIVOS<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
                     </p>
                 </div>
             </div>
@@ -51,9 +51,11 @@
                         ¿ PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        En sboza2 formamos profesionales, para ello disponemos del plan de estudios mejor adaptado a las demandas del mercado profesional de la Ilustraci&oacute;n. Enfocado a todos aquellos apasionados de la creatividad, el dibujo y el color que quieran dedicarse profesionalmente a ello.
+                        En sboza2 nuestro objetivo es aportar al alumno la evoluci&oacute;n profesional necesaria para realizar un proyecto de Motion Graphics en todas sus fases, desde como vender una idea con el elevado componente art&iacute;stico involucrado, hasta la realizaci&oacute;n de efectos visuales impactantes.
                         <br><br>
-                        Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color tradicional y digital.
+                        La propuesta del curso se basa en potenciar la creatividad del alumno y darle los recursos para desarrollar un pensamiento creativo y profesional, dot&aacute;ndolo de todos los conocimiento t&eacute;cnicos para realizar proyectos profesionales de Motion Graphics.
+                        <br><br>
+                        A lo largo del curso el alumno afrontara la realizaci&oacute;n de diversas propuestas con diferente estilos gr&aacute;ficos, visuales y narrativos, lo que le permite disponer de distintas piezas para su bobina personal, herramienta imprescindible para saltar al mercado laboral con una experiencia demostrable.
                     </p>
                 </div>
                 <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
@@ -63,7 +65,7 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/course-motion-graphic/icon-course.svg') }}"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
@@ -74,17 +76,17 @@
                         <strong>Diplomatura:</strong> Doble Titulaci&oacute;n, Privada Y Oficial*<br><br>
 
                         <strong>Curso totalmente pr&aacute;ctico.<br>
-                        3 d&iacute;as a la semana, 3 horas diarias.<br>
-                        360 horas lectivas anuales.<br>
-                        M&aacute;s de 200 horas de pr&aacute;cticas libres.</strong><br>
+                            2 d&iacute;as a la semana, 3 horas diarias.<br>
+                            240 horas lectivas anuales.<br>
+                            M&aacute;s de 150 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
-                        <strong>Grupos de ma&ntilde;ana y tarde.<br>
-                        Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
+                        <strong>Grupos de tardes.<br>
+                            Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
 
                         * Ense&ntilde;anzas sujetas al certificado de profesionalidad<br>
-                        ILUSTRACI&Oacute;N<br>
-                        (R.D. 1788 / 2011, de 16 de Diciembre)<br>
+                        DESARROLLO DE PRODUCTOS MULTIMEDIA INTERACTIVOS<br>
+                        (R.D. 1200 / 2007, de 14 de Septiembre)<br>
                     </p>
                 </div>
 
