--- a/app/Resources/views/desktop/courses/master_editorial_design.html.twig
+++ b/app/Resources/views/desktop/courses/master_editorial_design.html.twig
@@ -6,14 +6,14 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img4.png') }}" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/master-editorial-design/img3.png') }}" /></li>
                     </ul>
                 </div>
             </div>
@@ -25,10 +25,10 @@
                 </p>
                 <div class="first_column">
                     <p>
-                        curso superior de
+                        M&Aacute;STER DE
                     </p>
                     <p class="green">
-                        ilustraci&oacute;n tradicional y<br>digital
+                        DISE&Ntilde;O EDITORIAL, PUBLICITARIO Y <br>DISE&Ntilde;O WEB
                     </p>
                 </div>
                 <div class="second_column">
@@ -36,10 +36,10 @@
                         doble titulaci&oacute;n
                     </p>
                     <p class="green">
-                        ILUSTRACI&Oacute;N EDITORIAL Y DIGITAL<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
+                        DISE&Ntilde;O EDITORIAL, PUBLICITARIO Y DISE&Ntilde;O WEB<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
                     </p>
                     <p class="green">
-                        ILUSTRACI&Oacute;N<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
+                        DESARROLLO DE PRODUCTOS EDITORIALES MULTIMEDIA<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
                     </p>
                 </div>
             </div>
@@ -51,9 +51,9 @@
                         ¿ PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        En sboza2 formamos profesionales, para ello disponemos del plan de estudios mejor adaptado a las demandas del mercado profesional de la Ilustraci&oacute;n. Enfocado a todos aquellos apasionados de la creatividad, el dibujo y el color que quieran dedicarse profesionalmente a ello.
+                        Sboza2 prepara a sus alumnos para el mundo Editorial y Publicitario del Dise&ntilde;o Gr&aacute;fico, con una forma de aprendizaje creativa y directa, realizando ejercicios pr&aacute;cticos continuamente, impartidos por profesionales reconocidos en el &aacute;mbito laboral. Este curso se complementa con conocimientos de lenguaje de programaci&oacute;n, imprescindibles para la realizaci&oacute;n de proyectos web y editoriales. Somos conscientes de lo imprescindible que es darse a conocer, por esta raz&oacute;n te ense&ntilde;aremos a crear tu propio Blog profesional, para que puedas presentar tus trabajos.
                         <br><br>
-                        Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color tradicional y digital.
+                        Una vez finalizado el curso estar&aacute;s totalmente capacitado para desarrollar una labor competitiva en cualquier actividad laboral creativa, capaz de afrontar cualquier proyecto ya sea peque&ntilde;o o de gran envergadura como un profesional altamente cualificado.
                     </p>
                 </div>
                 <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
@@ -63,7 +63,7 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/master-editorial-design/icon-course.svg') }}"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
@@ -74,17 +74,17 @@
                         <strong>Diplomatura:</strong> Doble Titulaci&oacute;n, Privada Y Oficial*<br><br>
 
                         <strong>Curso totalmente pr&aacute;ctico.<br>
-                        3 d&iacute;as a la semana, 3 horas diarias.<br>
-                        360 horas lectivas anuales.<br>
-                        M&aacute;s de 200 horas de pr&aacute;cticas libres.</strong><br>
+                            4 d&iacute;as a la semana, 3 horas diarias.<br>
+                            480 horas lectivas anuales.<br>
+                            M&aacute;s de 300 horas de pr&aacute;cticas libres.</strong><br>
                         (Las horas de practicas libres corresponden al uso de las instalaciones, que el alumno podr&aacute; utilizar con total libertad sin ning&uacute;n tipo de coste adicional para la realizaci&oacute;n de sus proyectos)<br><br>
 
                         <strong>Grupos de ma&ntilde;ana y tarde.<br>
-                        Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
+                            Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
 
                         * Ense&ntilde;anzas sujetas al certificado de profesionalidad<br>
-                        ILUSTRACI&Oacute;N<br>
-                        (R.D. 1788 / 2011, de 16 de Diciembre)<br>
+                        DESARROLLO DE PRODUCTOS EDITORIALES MULTIMEDIA<br>
+                        (R.D. 1135 / 2007, de 31 de agosto)<br>
                     </p>
                 </div>
 
