--- a/app/Resources/views/desktop/courses/superior_graphic_design.html.twig
+++ b/app/Resources/views/desktop/courses/superior_graphic_design.html.twig
@@ -6,14 +6,14 @@
             <div class="slide_show">
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider1">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img1.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img4.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img1.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img4.png') }}" /></li>
                     </ul>
                 </div>
                 <div class="wrapper_content_slide_course">
                     <ul class="bxslider2">
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img2.png') }}" /></li>
-                        <li><img src="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/img3.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img2.png') }}" /></li>
+                        <li><img src="{{ asset('sboza2/img/course/superior-graphic-design/img3.png') }}" /></li>
                     </ul>
                 </div>
             </div>
@@ -25,10 +25,11 @@
                 </p>
                 <div class="first_column">
                     <p>
-                        curso superior de
+                        curso<br>
+                        superior de
                     </p>
                     <p class="green">
-                        ilustraci&oacute;n tradicional y<br>digital
+                        DISE&Ntilde;O GR&Aacute;FICO
                     </p>
                 </div>
                 <div class="second_column">
@@ -36,10 +37,10 @@
                         doble titulaci&oacute;n
                     </p>
                     <p class="green">
-                        ILUSTRACI&Oacute;N EDITORIAL Y DIGITAL<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
+                        DISE&Ntilde;O GR&Aacute;FICO<br><span>(PROPIO. EXPEDIDO POR SBOZA2)</span>
                     </p>
                     <p class="green">
-                        ILUSTRACI&Oacute;N<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
+                        DISE&Ntilde;O DE PRODUCTOS GR&Aacute;FICOS<br> <span>(OFICIAL Y EN PROCESO DE HOMOLOGACI&Oacute;N)</span>
                     </p>
                 </div>
             </div>
@@ -51,9 +52,11 @@
                         ¿ PARA QUE TE PREPARA SBOZA2 ?
                     </p>
                     <p class="text">
-                        En sboza2 formamos profesionales, para ello disponemos del plan de estudios mejor adaptado a las demandas del mercado profesional de la Ilustraci&oacute;n. Enfocado a todos aquellos apasionados de la creatividad, el dibujo y el color que quieran dedicarse profesionalmente a ello.
+                        En Sboza2 aprender&aacute;s a dominar el lenguaje de la comunicaci&oacute;n gr&aacute;fica, de forma creativa, aplic&aacute;ndolo en la ejecuci&oacute;n de proyectos que van desde la identidad corporativa a la maquetaci&oacute;n editorial, creaci&oacute;n de contenido para campa&ntilde;as publicitarias o dise&ntilde;os web.
                         <br><br>
-                        Aprende a dominar las t&eacute;cnicas del dibujo, y los diferentes campos de la Ilustraci&oacute;n relacion&aacute;ndolas con las ultimas tecnolog&iacute;as en tratamientos del color tradicional y digital.
+                        Conforme avance el curso aprender&aacute;s a tratar tus proyectos de forma eficaz buscando recursos creativos y competitivos que den respuesta a las necesidades planteadas.
+                        <br><br>
+                        Una vez finalizado el curso los conocimientos aprendidos te convertir&aacute;n en un profesional todoterreno capaz de dar soluciones a los proyectos planteados, llegando a estar totalmente capacitado para liderar un equipo creativo.
                     </p>
                 </div>
                 <img src="{{ asset('sboza2/img/course/btn-download-01.png') }}">
@@ -63,7 +66,7 @@
             <div class="wrapper-content-course">
                 <div class="content-text">
                     <div class="icon">
-                        <img src ="{{ asset('sboza2/img/course/course-ilustration-digital-traditional/icon-course.svg') }}"/>
+                        <img src ="{{ asset('sboza2/img/course/superior-graphic-design/icon-course.svg') }}"/>
                     </div>
                     <p class="title">
                         DATOS DE INTER&Eacute;S
@@ -83,8 +86,8 @@
                         Todo el material que el alumno precisa para la realizaci&oacute;n del curso corre por cuenta de la escuela.</strong><br><br>
 
                         * Ense&ntilde;anzas sujetas al certificado de profesionalidad<br>
-                        ILUSTRACI&Oacute;N<br>
-                        (R.D. 1788 / 2011, de 16 de Diciembre)<br>
+                        DISE&Ntilde;O DE PRODUCTOS GR&Aacute;FICOS<br>
+                        (R.D. 1228 / 2006, de 27 de Octubre)<br>
                     </p>
                 </div>
 
